# daystrom

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/daystrom/: context.py
src/daystrom/components/: __init__.py  base.py  instructor.py
src/daystrom/components/openai/: chat_completions.py
src/daystrom/components/openrouter/: chat.py
src/daystrom/nodes/components/: instructor.py
tests/integration/: test_flow.py
tests/integration/components/: test_instructor.py
tests/integration/components/openrouter/: test_chat.py
tests/integration/nodes/openrouter/: test_chat.py
tests/unit/: test_context.py
