[project]
name = "daystrom"
version = "0.1.0"
description = "Daystrom is an agent framework for easily building worflows"
authors = [
    { name = "Lucas Teixeira", email = "lemetechnical@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "FSL-1.1-MIT"
dependencies = [
    "instructor>=1.13.0",
    "openrouter>=0.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[pytest]
addopts = ["--import-mode=importlib"]
